<resources>
    <string name="app_name">Виселица</string>
    <string name="gallows">The Gallows</string>
    <string name="head">The Head</string>
    <string name="body">The Body</string>
    <string name="arm">An Arm</string>
    <string name="leg">A Leg</string>
    <string name="play">Одиночная игра</string>
    <string name="multiPlayer">Играть вдвоём</string>
    <string name="button">Загадать слово</string>
    <string name="editText">Введите слово которое хотите загадать</string>
    <string name="login">Логин</string>
    <string name="signIn">Введите игровой никнейм</string>
    <string name="vxod">Вход</string>
    <string name="records">Рекорды</string>
</resources>
